--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.6.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.EcommerceLP2</groupId>
+	<groupId>com.controller.EcommerceLP2</groupId>
 	<artifactId>EcommerceLP2</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>EcommerceLP2</name>
